// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/collapse/demo/accordion.md correctly 1`] = `
<div
  class="ant-collapse"
  role="tablist"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/basic.md correctly 1`] = `
<div
  class="ant-collapse"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p>
          
  A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.

        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-disabled"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="-1"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/borderless.md correctly 1`] = `
<div
  class="ant-collapse ant-collapse-borderless"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p
          style="padding-left:24px"
        >
          A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.
        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/custom.md correctly 1`] = `
<div
  class="ant-collapse ant-collapse-borderless"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
    style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: caret-right"
        class="anticon anticon-caret-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-right"
          fill="currentColor"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M715.8 493.5L335 165.1c-14.2-12.2-35-1.2-35 18.5v656.8c0 19.7 20.8 30.7 35 18.5l380.8-328.4c10.9-9.4 10.9-27.6 0-37z"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p>
          
  A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.

        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
    style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: caret-right"
        class="anticon anticon-caret-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M715.8 493.5L335 165.1c-14.2-12.2-35-1.2-35 18.5v656.8c0 19.7 20.8 30.7 35 18.5l380.8-328.4c10.9-9.4 10.9-27.6 0-37z"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
    style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: caret-right"
        class="anticon anticon-caret-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M715.8 493.5L335 165.1c-14.2-12.2-35-1.2-35 18.5v656.8c0 19.7 20.8 30.7 35 18.5l380.8-328.4c10.9-9.4 10.9-27.6 0-37z"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/mix.md correctly 1`] = `
<div
  class="ant-collapse"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/noarrow.md correctly 1`] = `
<div
  class="ant-collapse"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      This is panel header with arrow icon
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p>
          
  A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.

        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-no-arrow"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      This is panel header with no arrow icon
    </div>
  </div>
</div>
`;
